# Funcy

./: .gitignore  .hlint.yaml  .yo-rc.json  Funcy Interpreter.code-workspace  Funcy Specifications.code-workspace  LICENSE  README.md  STRUCTURE.md  STRUCTURES.md  Structure.md  cabal.project
example/: Tutorial.fnc
funcy/: CHANGELOG.md  README.md  package.json  vsc-extension-quickstart.md
funcy/syntaxes/: funcy.tmLanguage.json
interpreter/: ChangeLog.md  Interpreter.hs  LICENSE  funcy-interpreter.cabal  funcy.cpp  funcyInterpreter.cabal
interpreter/Funcy/Interpreter/: InterModules.hs  Modules.hs  Values.hs
interpreter/app/: Main.hs
interpreter/src/: CustomPrelude.hs  Utils.hs
interpreter/src/Abstraction/Class/: Categories.hs  FiniteObjs.hs  Monoids.hs
interpreter/src/Abstraction/Concrete/: FreeClosed.hs
interpreter/src/Abstraction/Types/: HConst.hs  MappedTuple.hs  Selector.hs  Tagged.hs  Tuple.hs  TypeList.hs
interpreter/src/Effects/: EnvMap.hs
interpreter/src/Interpreter/: Bare.hs  Categorical.hs  Expr.hs  Graph.hs  Interpret.hs  Modules.hs  Parser.hs  Pattern.hs  Structure.hs  Translate.hs  Values.hs
interpreter/src/Interpreter/Class/: Categories.hs  Monoids.hs
interpreter/src/Interpreter/Process/: Categorical.hs  FunComplete.hs  Interpret.hs  Parser.hs  Simplify.hs  Translate.hs
interpreter/src/Interpreter/Structure/: Decl.hs  Expr.hs  Graph.hs  Pattern.hs  Structure.hs  Values.hs
interpreter/src/Interpreter/Types/: HConst.hs  MappedTuple.hs  Selector.hs  Tagged.hs  Tuple.hs  TypeList.hs
source/: Test.fnc  Tutorial.fnc  basics.fnc  data.fnd  examplelist.fnc  examplelist0_1_1.fnc  examplelist0_1_2.fnc  somedata.fnc  tutorial.fnc
source/array/: array.fnc
source/common/basis/: Format.fnc  Import.fnc  Pointer.fnc  Types.fnc
source/common/buffer/: Buffer.fnc
source/common/collection/: Array.fnc  Ites.fnc  List.fnc
source/common/control/: Controls.fnc  Loop.fnc
source/common/generics/: Commons.fnc  Generics.fnc  Utilities.fnc
source/common/integer/: Range.fnc
source/common/io/: Console.fnc  InOut.fnc
source/common/memory/: Memory.fnc
source/common/operator/: Equal.fnc  Order.fnc
source/common/system/: System.fnc
source/data/: data.fnd
source/lang/arithmetics/: Boolean.fnc  Function.fnc  Integer.fnc  Set.fnc
source/lang/basis/: Basis.fnc
source/lang/collection/: Array.fnc  Ites.fnc  List.fnc
source/lang/control/: Controls.fnc
source/lang/format/: Block.fnc  Format.fnc  Function.fnc  Import.fnc  Reference.fnc
source/lang/generics/: Commons.fnc  Generics.fnc  Utilities.fnc
source/lang/io/: Console.fnc  InOut.fnc
source/lang/memory/: Memory.fnc
source/lang/system/: System.fnc
source/set/: set.fnc
source/sety/: SetArithmetics.set
std/: std.fpkg
std/src/: ADT.fnc  Category.fnc  Function.fnc  Num.fnc  Prelude.fnc  Relation.fnc  Text.fnc  Tutorial.fnc  Type.fnc
std/src/Abstract/: Category.fnc  Functor.fnc  Profunctor.fnc
std/src/Algebra/: Semigroup.fnc
std/src/Arith/: Additive.fnc  Int.fnc
std/src/Codata/: Both.fnc  Stream.fnc
std/src/Control/: Effect.fnc
std/src/Data/: ADT.fnc  Array.fnc  Bool.fnc  Either.fnc  Option.fnc  Text.fnc
std/src/Relation/: Eq.fnc  Ord.fnc
