cabal-version:      3.0
name:               funcy-interpreter
version:            0.1.0.0
synopsis:           Interpreter for Funcy language
description:
    Funcy is a dependently typed functional language,
    focused on representing the semantics in category theory.
    This project is a reference interpreter for the funcy language.

homepage:           https://github.com/Abastro/Funcy
license:            BSD-3-Clause
license-file:       LICENSE
author:             Abastro
maintainer:         abab9579@gmail.com
copyright:          2018-2024 Abastro
category:           Language
extra-source-files: ChangeLog.md

common libs
    build-depends:
        base ^>=4.18.2.0,
        transformers,
        mtl,
        containers,
        text,
        vector,
        filepath,
        directory,
        megaparsec ^>=9.6.1,

common opts
    ghc-options:
        -W

library
    import:             libs, opts
    exposed-modules:
        CustomPrelude
        Effects.EnvMap
        
        Abstraction.Class.Categories
        Abstraction.Class.FiniteObjs

        Abstraction.Types.MappedTuple
        Abstraction.Types.TypeList
        Abstraction.Types.HConst
        Abstraction.Types.Selector
        Abstraction.Types.Tagged
        Abstraction.Types.Tuple

        Abstraction.Concrete.FreeClosed

        Interpreter.Structure.Structure
        Interpreter.Structure.Values
        Interpreter.Structure.Pattern
        Interpreter.Structure.Expr
        Interpreter.Structure.Decl

        Interpreter.Process.FunComplete
        Interpreter.Process.Simplify
        Interpreter.Process.Interpret
        Interpreter.Process.Translate
        Interpreter.Process.Parser

    default-extensions:
        MultiParamTypeClasses
        NoImplicitPrelude
        LambdaCase
        NoFieldSelectors
        OverloadedRecordDot

    hs-source-dirs:   src
    default-language: GHC2021

executable funcy-interpreter
    import:             libs
    main-is:            Main.hs
    default-extensions:
        MultiParamTypeClasses

    hs-source-dirs:     app
    default-language:   GHC2021

test-suite funcy-interpreter-test
    import:             libs
    default-language:   GHC2021
    type:               exitcode-stdio-1.0
    hs-source-dirs:     test
    main-is:            MyLibTest.hs

